[gd_scene load_steps=32 format=2]

[ext_resource path="res://Assets/Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scripts/PetMinigame.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scripts/FoodMinigame.gd" type="Script" id=3]
[ext_resource path="res://Assets/Scenes/Bichete.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Scenes/HandParticles.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Sprites/Dependent/tamagotchi_case.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/hand.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Food/aceituna_spritesheet.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/console_background.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Food/mushroom_spritesheet.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Dependent/buttons_spritesheet.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/background.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Food/cheese_spritesheet.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/food_UI.png" type="Texture" id=14]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 104, 134 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 134, 104, 134 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 104, 134 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 134, 104, 134 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 104, 134 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 134, 104, 134 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 163.088, 141.151 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 11 )
region = Rect2( 0, 60, 97, 60 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 97, 60, 97, 60 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 97, 60 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 97, 0, 97, 60 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 97, 120, 97, 60 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 0, 120, 97, 60 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 0, 240, 97, 60 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 97, 240, 97, 60 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 11 )
region = Rect2( 0, 180, 97, 60 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 11 )
region = Rect2( 97, 180, 97, 60 )

[node name="Snail" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 360, 256 )
texture = ExtResource( 12 )

[node name="ConsoleBackground" type="Sprite" parent="."]
position = Vector2( 360, 288 )
texture = ExtResource( 9 )

[node name="Bichete" parent="." instance=ExtResource( 4 )]
position = Vector2( 360, 287.358 )

[node name="PetMinigame" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Cursor" type="Sprite" parent="PetMinigame"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="HandParticles" parent="PetMinigame/Cursor" instance=ExtResource( 5 )]
show_behind_parent = true
position = Vector2( 0, -45.2548 )
scale = Vector2( 2, 2 )

[node name="CursorDefaultLocation" type="Node2D" parent="PetMinigame"]
position = Vector2( 526.347, 436.228 )

[node name="FoodMinigame" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Cursor" type="Sprite" parent="FoodMinigame"]
visible = false
position = Vector2( 360, 364.732 )
texture = ExtResource( 8 )
vframes = 4

[node name="FoodHUD" type="Control" parent="FoodMinigame"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomPanel" type="TextureRect" parent="FoodMinigame/FoodHUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 210.943
margin_top = 365.466
margin_right = 506.943
margin_bottom = 432.466
rect_pivot_offset = Vector2( 148, 0 )
mouse_filter = 2
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Food1" type="TextureButton" parent="FoodMinigame/FoodHUD"]
margin_left = 204.625
margin_top = 298.068
margin_right = 308.625
margin_bottom = 432.068
texture_normal = SubResource( 1 )
texture_hover = SubResource( 2 )

[node name="Food2" type="TextureButton" parent="FoodMinigame/FoodHUD"]
margin_left = 308.625
margin_top = 298.068
margin_right = 412.625
margin_bottom = 432.068
texture_normal = SubResource( 3 )
texture_hover = SubResource( 4 )

[node name="Food3" type="TextureButton" parent="FoodMinigame/FoodHUD"]
margin_left = 412.625
margin_top = 298.068
margin_right = 516.625
margin_bottom = 432.068
texture_normal = SubResource( 5 )
texture_hover = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenArea" type="Area2D" parent="."]
position = Vector2( -171.649, -20.655 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenArea"]
position = Vector2( 532.15, 308.013 )
shape = SubResource( 7 )

[node name="HUD" type="Control" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" type="TextureRect" parent="HUD"]
margin_right = 720.0
margin_bottom = 507.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PetButton" type="TextureButton" parent="HUD"]
margin_left = 565.409
margin_top = 187.284
margin_right = 662.409
margin_bottom = 247.284
shortcut_in_tooltip = false
texture_normal = SubResource( 8 )
texture_pressed = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodButton" type="TextureButton" parent="HUD"]
margin_left = 564.743
margin_top = 253.159
margin_right = 661.743
margin_bottom = 313.159
shortcut_in_tooltip = false
texture_normal = SubResource( 10 )
texture_pressed = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerButton" type="TextureButton" parent="HUD"]
margin_left = 564.443
margin_top = 349.695
margin_right = 661.443
margin_bottom = 409.695
texture_normal = SubResource( 12 )
texture_pressed = SubResource( 13 )

[node name="VolumeDown" type="TextureButton" parent="HUD"]
margin_left = 31.8228
margin_top = 338.866
margin_right = 128.823
margin_bottom = 398.866
texture_normal = SubResource( 14 )
texture_pressed = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeUp" type="TextureButton" parent="HUD"]
margin_left = 80.7272
margin_top = 361.13
margin_right = 177.727
margin_bottom = 421.13
texture_normal = SubResource( 16 )
texture_pressed = SubResource( 17 )
[connection signal="pet" from="PetMinigame" to="Bichete" method="_on_PetMinigame_pet"]
[connection signal="pet_minigame_finished" from="PetMinigame" to="Bichete" method="_on_PetMinigame_pet_minigame_finished"]
[connection signal="pet_minigame_started" from="PetMinigame" to="Bichete" method="_on_PetMinigame_pet_minigame_started"]
[connection signal="food" from="FoodMinigame" to="Bichete" method="_on_FoodMinigame_food"]
[connection signal="food_minigame_finished" from="FoodMinigame" to="Bichete" method="_on_FoodMinigame_food_minigame_finished"]
[connection signal="food_minigame_started" from="FoodMinigame" to="Bichete" method="_on_FoodMinigame_food_minigame_started"]
[connection signal="button_down" from="FoodMinigame/FoodHUD/Food1" to="FoodMinigame" method="_on_Food1_button_down"]
[connection signal="button_down" from="FoodMinigame/FoodHUD/Food2" to="FoodMinigame" method="_on_Food2_button_down"]
[connection signal="button_down" from="FoodMinigame/FoodHUD/Food3" to="FoodMinigame" method="_on_Food3_button_down"]
[connection signal="mouse_entered" from="ScreenArea" to="PetMinigame" method="_on_ScreenArea_mouse_entered"]
[connection signal="mouse_entered" from="ScreenArea" to="FoodMinigame" method="_on_ScreenArea_mouse_entered"]
[connection signal="mouse_exited" from="ScreenArea" to="PetMinigame" method="_on_ScreenArea_mouse_exited"]
[connection signal="mouse_exited" from="ScreenArea" to="FoodMinigame" method="_on_ScreenArea_mouse_exited"]
[connection signal="button_down" from="HUD/PetButton" to="PetMinigame" method="_on_PetButton_button_down"]
[connection signal="button_down" from="HUD/PetButton" to="FoodMinigame" method="_on_PetButton_button_down"]
[connection signal="button_down" from="HUD/FoodButton" to="PetMinigame" method="_on_FoodButton_button_down"]
[connection signal="button_down" from="HUD/FoodButton" to="FoodMinigame" method="_on_FoodButton_button_down"]
[connection signal="button_down" from="HUD/PowerButton" to="HUD" method="_on_PowerButton_button_down"]
[connection signal="button_down" from="HUD/VolumeDown" to="HUD" method="_on_VolumeDown_button_down"]
[connection signal="button_down" from="HUD/VolumeUp" to="HUD" method="_on_VolumeUp_button_down"]
